--- a/build.gradle
+++ b/build.gradle
@@ -9,15 +9,34 @@
 plugins {
     // Apply the java plugin to add support for Java
     id 'java'
+}
+group = 'com.navi.stockexchange'
+version = '1.0'
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
-    // Apply the application plugin to add support for building a CLI application.
-    id 'application'
+jar {
+    archiveBaseName = 'geektrust' //Please do not change this final artifact name
+    version =  null               //Please do not change this final artifact version
+    archiveBaseVersion = null     //Please do not change this final artifact version
+    manifest {
+        attributes 'Main-Class' : 'com.navi.stockexchange.Geektrust' //This is main class of your program which will be executed
+    }
+
+    // To create a single jar with all dependencies.
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    } {
+        exclude "META-INF/*.SF"
+        exclude "META-INF/*.DSA"
+        exclude "META-INF/*.RSA"
+    }
 }
 
 repositories {
     // Use jcenter for resolving dependencies.
     // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
@@ -37,7 +56,3 @@ dependencies {
     testImplementation group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
 }
 
-application {
-    // Define the main class for the application.
-    mainClassName = 'com.navi.stockexchange.Geektrust'
-}
